Update lintian overrides.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1461 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-compiler-ia32.lintian-overrides.in
+++ b/debian/libnvidia-compiler-ia32.lintian-overrides.in
@@ -1,3 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-libnvidia-compiler-ia32: sharedobject-in-library-directory-missing-soname
+libnvidia-compiler-ia32: binary-has-unneeded-section
+libnvidia-compiler-ia32: shlib-with-executable-stack
+libnvidia-compiler-ia32: shlib-with-non-pic-code
 libnvidia-compiler-ia32: spelling-error-in-binary
