--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
+libcuda1: shlib-with-executable-stack
 #!amd64#libcuda1: shlib-with-non-pic-code
-#!amd64#libcuda1: shlib-without-PT_GNU_STACK-section
 libcuda1: unstripped-binary-or-object
 
 # libcudart.so.2 does dlopen("libcuda.so").
