--- a/debian/nvidia-libopencl1.lintian-overrides.in
+++ b/debian/nvidia-libopencl1.lintian-overrides.in
@@ -1,3 +1,3 @@
 # The NVIDIA license does not allow any form of modification.
+nvidia-libopencl1: shlib-with-executable-stack
 #!amd64#nvidia-libopencl1: shlib-with-non-pic-code
-#!amd64#nvidia-libopencl1: shlib-without-PT_GNU_STACK-section
