--- a/debian/rules
+++ b/debian/rules
@@ -163,8 +163,8 @@ kernel-source-tree: prepare build-kernel-source-tree
 	cp -a $(module_source) $@
 	cd $@ && QUILT_PATCHES=debian/patches quilt --quiltrc /dev/null push -a || test $$? = 2
 
-override_dh_install:
-	dh_install --list-missing
+#override_dh_install:
+#	dh_install --list-missing
 
 override_dh_installchangelogs:
 	dh_installchangelogs debian/tmp/usr/share/doc/NVIDIA_Changelog
