nvidia-kernel-source: lower Recommends: nvidia-glx to Suggests to avoid pulling nvidia-kernel-dkms into the system before the user had a chance to build a module (see #590221).
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1525 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -227,7 +227,9 @@ Section: non-free/kernel
 Architecture: i386 amd64
 Depends: ${misc:Depends}, debhelper (>= 8), make, quilt (>= 0.46-7~)
 Recommends: module-assistant | kernel-package,
- nvidia-glx${nvidia:Legacy} (>= ${nvidia:Version}), nvidia-kernel-common
+ nvidia-kernel-common
+Suggests:
+ nvidia-glx${nvidia:Legacy} (>= ${nvidia:Version}),
 Conflicts:
  linux-headers-2.6.32-trunk-486 [i386], linux-image-2.6.32-trunk-486 [i386],
  linux-headers-2.6.32-trunk-686 [i386], linux-image-2.6.32-trunk-686 [i386],
