--- a/debian/control
+++ b/debian/control
@@ -88,13 +88,11 @@ Description: NVIDIA binary driver 32-bit libs${nvidia:LegacyDesc}
 Package: nvidia-glx-dev
 Section: non-free/oldlibs
 Architecture: i386 amd64
-Depends: libgl1-nvidia${nvidia:Legacy}-dev, ${misc:Depends}
+Depends: libgl1-mesa-dev | libgl-dev, ${misc:Depends}
 Description: NVIDIA OpenGL development files (transitional package)${nvidia:LegacyDesc}
- This is a transitional dummy package to aid migration to
- libgl1-nvidia${nvidia:Legacy}-dev.
- .
- For building portable OpenGL applications, please install libgl1-mesa-dev
- instead.
+ This is a transitional dummy package to aid migration to libgl1-mesa-dev.
+ NVIDIA recommends to use the official headers for developing OpenGL
+ applications.
 
 Package: libgl1-nvidia-glx
 Section: non-free/libs
