--- a/debian/control
+++ b/debian/control
@@ -89,6 +89,8 @@ Package: nvidia-glx-dev
 Section: non-free/oldlibs
 Architecture: i386 amd64
 Depends: libgl1-mesa-dev | libgl-dev, ${misc:Depends}
+Conflicts: libgl1-nvidia${nvidia:Legacy}-dev
+Replaces: libgl1-nvidia${nvidia:Legacy}-dev
 Description: NVIDIA OpenGL development files (transitional package)${nvidia:LegacyDesc}
  This is a transitional dummy package to aid migration to libgl1-mesa-dev.
  NVIDIA recommends to use the official headers for developing OpenGL
@@ -154,32 +156,6 @@ Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
  See the description of the nvidia-glx${nvidia:Legacy} package
  or /usr/share/doc/libgl1-nvidia${nvidia:Legacy}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
-
-Package: libgl1-nvidia-dev
-Section: non-free/libdevel
-Architecture: i386 amd64
-Depends:
- libgl1-nvidia${nvidia:Legacy}-glx (= ${binary:Version}),
- libx11-dev,
- libgl1-mesa-dev | libgl-dev,
- ${misc:Depends}
-Provides:
- libgl1-nvidia-dev,
-Conflicts:
- libgl1-nvidia-dev,
- nvidia-glx-dev (<< 195.36.31),
- nvidia-glx-legacy-dev,
- nvidia-glx-legacy-71xx-dev,
- nvidia-glx-legacy-96xx-dev,
- nvidia-glx-legacy-173xx-dev,
-Replaces: nvidia-glx${nvidia:Legacy}-dev (<< 195.36.31)
-Description: NVIDIA OpenGL development files${nvidia:LegacyDesc}
- NVIDIA recommends to use the official OpenGL headers for developing OpenGL
- applications.  Therefore this package does not provide these headers any
- longer but depends on libgl1-mesa-dev instead.
- .
- For more information on this source package visit NVIDIA's homepage
- at http://www.nvidia.com/ .
 
 Package: nvidia-kernel-dkms
 Section: non-free/kernel
