--- a/debian/module/debian/rules
+++ b/debian/module/debian/rules
@@ -17,7 +17,7 @@ endif
 
 # Find kernel build information.
 ifndef KSRC
-    KSRC = /usr/src/linux
+    KSRC := /lib/modules/$(shell uname -r)/build
 endif
 ifndef KPKG_DEST_DIR
     KPKG_DEST_DIR = ..
