--- a/debian/nvidia-libopencl1.lintian-overrides.in
+++ b/debian/nvidia-libopencl1.lintian-overrides.in
@@ -1,3 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 nvidia-libopencl1: shlib-with-executable-stack
 #!amd64#nvidia-libopencl1: shlib-with-non-pic-code
+
+# A single symbolic link does not justify the creation of a new package.
+nvidia-libopencl1: non-dev-pkg-with-shlib-symlink
