Restrict nvidia-opencl-common Recommends: nvidia-opencl-icd-ia32 to amd64.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1583 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -458,7 +458,7 @@ Package: nvidia-opencl-common
 Section: non-free/libs
 Architecture: i386 amd64
 Depends: ${misc:Depends},
-Recommends: nvidia-opencl-icd | nvidia-opencl-icd-ia32
+Recommends: nvidia-opencl-icd | nvidia-opencl-icd-ia32 [amd64]
 Description: NVIDIA OpenCL driver
  OpenCL (Open Computing Language) is a multivendor open standard for
  general-purpose parallel programming of heterogeneous systems that include
