do not provide the replaced packages
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1609 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -352,7 +352,6 @@ Suggests:
 Replaces: nvidia-glx (<< 185.18.14-2), nvidia-glx-dev (<< 185.18.14-2),
  libcuda1-dev
 Conflicts: libcuda1-dev
-Provides: libcuda1-dev
 Homepage: http://www.nvidia.com/CUDA
 Description: NVIDIA CUDA runtime library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
@@ -494,7 +493,7 @@ Architecture: i386 amd64
 Depends: ${shlibs:Depends}, ${misc:Depends},
 Conflicts: nvidia-libopencl1-dev
 Replaces: nvidia-libopencl1-dev
-Provides: libopencl1, nvidia-libopencl1-dev
+Provides: libopencl1
 Recommends: opencl-icd | nvidia-opencl-icd
 Description: NVIDIA OpenCL library
  OpenCL (Open Computing Language) is a multivendor open standard for
