--- a/debian/control
+++ b/debian/control
@@ -399,7 +399,7 @@ Section: non-free/libs
 Architecture: i386 amd64
 Depends: libcuda1 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Conflicts: libnvidia-compiler1 (<< 195.36.31)
+Conflicts: libnvidia-compiler1
 Replaces: libnvidia-compiler1
 Description: NVIDIA runtime compiler library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
@@ -414,7 +414,7 @@ Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
 Depends: libcuda1-ia32 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Conflicts: libnvidia-compiler1-ia32 (<< 195.36.31)
+Conflicts: libnvidia-compiler1-ia32
 Replaces: libnvidia-compiler1-ia32
 Description: NVIDIA runtime compiler library (32-bit)
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
@@ -422,22 +422,6 @@ Description: NVIDIA runtime compiler library (32-bit)
  general purpose computation.
  .
  This package contains the runtime compiler library (32-bit).
-
-Package: libnvidia-compiler1
-Section: non-free/oldlibs
-Architecture: i386 amd64
-Depends: libnvidia-compiler,
- ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA runtime compiler library (transitional package)
- This is a dummy package to aid switching to libnvidia-compiler.
-
-Package: libnvidia-compiler1-ia32
-Section: non-free/oldlibs
-Architecture: amd64
-Depends: libnvidia-compiler-ia32,
- ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA runtime compiler library (32-bit) (transitional package)
- This is a dummy package to aid switching to libnvidia-compiler-ia32.
 
 Package: nvidia-opencl-common
 Section: non-free/libs
