move empty package nvidia-glx-ia32 to Section: oldlibs
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1619 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -58,6 +58,7 @@ Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
  for a complete list of supported GPUs and PCI IDs.
 
 Package: nvidia-glx-ia32
+Section: non-free/oldlibs
 Priority: extra
 Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
