--- a/debian/nvidia-glx.README.Debian.in
+++ b/debian/nvidia-glx.README.Debian.in
@@ -52,8 +52,31 @@ To enable accelerated XVideo Motion Compensation (XvMC) which is supported
 on GeForce 6 series and GeForce 7 series GPUs, you need to modify
 /etc/X11/XvMCConfig to contain a reference to the NVIDIA library
     libXvMCNVIDIA_dynamic.so.1
-instead.  For more information about XvMC support see Appendix G in 
+instead.  For more information about XvMC support see Appendix G in
 /usr/share/doc/nvidia-glx#LEGACY#/README.txt.gz
 
 
- -- Andreas Beckmann <debian@abeckmann.de>  Mon, 07 Jun 2010 11:19:12 +0200
+NOTES ABOUT WARNINGS emitted during installation/upgrade:
+-----------------------------------------------------------------------
+
+You might see these warnings while upgrading the nvidia driver package from a
+release before squeeze:
+
+    WARNING: Renaming conflicting file '<filename>' to '<filename>.dpkg-old'.
+
+    WARNING: The file '<filename>' found on your system may interfere with accelerated OpenGL.
+
+This usually means some file was found on your system that is not under the
+control of the package manager, i.e. not owned by any package currently
+installed.  The file may be remaining from an ancient buggy package
+(pre-dating the lenny release) that has been upgraded/removed in the meantime
+or from having used NVIDIA's installer in the past.
+
+These files most likely can be safely moved away from the library directories
+so that they may not cause harm, e.g. being preferred over the current driver
+etc.  Reinstallation of the libgl1-nvidia-alternatives package is recommended
+after (re-)moving these files.  This will correct missing/incorrect symbolic
+links.
+
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 22:56:18 +0200
